# listpad

./: .clang-format  .gitignore  Block.cpp  Block.h  CMakeLists.txt  Content.cpp  Content.h  Content.ui  DesktopButton.cpp  DesktopButton.h  Listpad2.pro  LogoWidget.cpp  LogoWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Menu.cpp  Menu.h  Menu.ui  MenuButton.cpp  MenuButton.h  README.md  ScrollArea.cpp  ScrollArea.h  ScrollArea.ui  ScrollBar.cpp  ScrollBar.h  ScrollBar.ui  ShadowWidget.cpp  ShadowWidget.h  Slider.cpp  Slider.h  SliderItem.cpp  SliderItem.h  Style.cpp  Style.h  Table.cpp  Table.h  Table.ui  changelog.md  (+5 more)
core/: Data.cpp  Data.h  SqlData.cpp  SqlData.h  Table.cpp  Table.h  TableRows.cpp  TableRows.h
engines/: SearchEngine.cpp  SearchEngine.h
fonts/fontello-76a9d6c6/: LICENSE.txt  config.json  demo.html
fonts/fontello-76a9d6c6/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
fonts/fontello-76a9d6c6/font/: fontello.eot
handlers/: TableDownArrowClickHandler.cpp  TableDownArrowClickHandler.h  TableUpArrowClickHandler.cpp  TableUpArrowClickHandler.h
project/: Listpad.ncp  UML.juth  licon.ai  Макет.psd
project/Listpad/: settings.ini
project/Listpad/data/: table0.xml  table1.xml  table2.xml
project/design/: idea1.psd
project/fontello-b39823e5/: LICENSE.txt  config.json  demo.html
project/fontello-b39823e5/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
project/fontello-b39823e5/font/: fontello.eot
project/lifehacks/: Всегда ставь фигурные скобки.txt  Используй декларативный стиль.txt  Принцип одной обязанности.txt
project/problems/: Scroll Area слишком жирный.txt  XML Reader считывает не все.txt  XML Writer не записывает перевод строки.txt
styles/: Background.cpp  Background.h  BackgroundClassic.cpp  BackgroundClassic.h  BackgroundThreeParts.cpp  BackgroundThreeParts.h  Borders.cpp  Borders.h  Pixmap.cpp  Pixmap.h  Sides.cpp  Sides.h  State.cpp  State.h  Text.cpp  Text.h
tools/: EventCallback.h  LayoutIterator.h
widgets/: CollectionTable.cpp  CollectionTable.h  SimpleScrollBar.cpp  SimpleScrollBar.h  WidgetScrollArea.cpp  WidgetScrollArea.h
widgets/elements/: CheckBox.cpp  CheckBox.h  CheckBox.ui  Image.cpp  Image.h  LineEdit.cpp  LineEdit.h  MenuItem.cpp  MenuItem.h  MenuItem.ui  SearchLine.cpp  SearchLine.h  SearchLine.ui  StarButton.cpp  StarButton.h  StarButton.ui
